# vervaeke-tutor

./: .envrc  .gitignore  README.md  pyproject.toml  tutor.py
src/vervaeke_tutor/: __init__.py  __main__.py  tutor.py
tests/: test_tutor.py
